# isdfBenchmarks

./: .gitignore  README.md  pyproject.toml
isdfbenchmarks/molecule_set/: molecular_inputs.py  molecular_xyz.py
isdfbenchmarks/parser/: inp_gen.py  parse_dir.py  profiling.py  stdout.py
isdfbenchmarks/submission/: remote.py  slurm.py
jobs/: kmeans_profiling.py  kmeans_seeding.ipynb  molecular_scaling.py
jupyter/: anthracene.ipynb  clean_kmeans_seeding.ipynb  clean_molecular_analysis.ipynb  directories.md  kmeans_profiling.ipynb  kmeans_report.md  kmeans_seeding.ipynb  molecular_isdf.ipynb  molecular_review.md  paramiko_example.ipynb
jupyter/Molecule Report - Sept 2025/: molecular_review.md  molecular_review_pandoc.md
scripts/: submit.py
tests/: test_stdout.py
